[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resultyst_env"
version = "1.0.0"
description = "Two-stage HR workflow environment for training and evaluating AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Team Resultyst" }
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "httpx==0.27.2",
    "requests==2.32.3",
    "openai==1.57.4",
    "anyio==4.7.0",
    "openenv-core>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/Resultyst/ResultystEnv_Scaler_Meta"

[project.scripts]
server = "server.app:main"
